Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-19536

Caught SIGSEGV in libforestdb at fdb_get_all_snap_markers

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Critical
    • 4.5.0
    • 4.5.0
    • forestdb
    • 4.5.0-2478

    Description

       
      Service 'indexer' exited with status 1. Restarting. Messages: Caught SIGSEGV in libforestdb at fdb_get_all_snap_markers
      2016-05-06T02:52:14.512-07:00 [Info] ForestDBSlice::OpenSnapshot SliceId 0 IndexInstId 11966988751707376912 Creating New Snapshot SnapshotInfo: seqnos: 1397047, 1397047, 0 committed:false
      2016-05-06T02:52:14.524-07:00 [Info] StorageMgr::handleCreateSnapshot Added New Snapshot Index: 11966988751707376912 PartitionId: 0 SliceId: 0 Crc64: 11984523537056142099 (SnapshotInfo: seqnos: 1397047, 1397047, 0 committed:false) SnapCreateDur 165.426µs SnapOpenDur 12.052266ms
      Breakpad caught a crash in forestdb. Writing crash dump to /opt/couchbase/var/lib/couchbase/crash/0e47304d-8708-6386-52a6c87b-13854dad.dmp before terminating.
      [goport] 2016/05/06 02:52:18 /opt/couchbase/bin/indexer terminated: signal: segmentation fault (core dumped)
      

      Attachments

        For Gerrit Dashboard: MB-19536
        # Subject Branch Project Status CR V

        Activity

          People

            chiyoung Chiyoung Seo (Inactive)
            ritam.sharma Ritam Sharma
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty