MB-19536 Check if file's superblock is NULL or not in fdb_get_all_snap_markers

As a file's superblock is still NULL and not initialized yet, we should check
if it is NULL or not before accessing its member variables.

Change-Id: I0f81922694379ea9d0ea1ccd07e8daefc6292b10
Reviewed-on: http://review.couchbase.org/63803
Reviewed-by: abhinav dangeti <abhinav@couchbase.com>
Tested-by: Chiyoung Seo <chiyoung@couchbase.com>